--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -40,11 +40,11 @@
     <a href="Project1.html">click to learn more</a>
     <p class="centeredtext">Project 1</p>
 </div>
-  <div class="column">
+  <div class="box">
     <img src="Project 2.jpeg" alt="Project 2" class="mediumimage">
     <p class="centeredtext">Project 2</p>
 </div>
-  <div class="column">
+  <div class="box">
     <img src="Project 3.png" alt="Project 3" class="smallerimage">
     <p class="centeredtext">Project 3</p>
 
