--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -34,20 +34,25 @@
 
 <h1>Projects</h1>
 
-<main id="ProjectContent">
+<main id="layout">
 <div class="box">
+  <div class="section1">
     <img src="Project1.jpg" alt="Project 1" class="miniimage" class="sectionimg">
     <a href="Project1.html">click to learn more</a>
     <p class="centeredtext">Project 1</p>
 </div>
+</div>
   <div class="box">
+    <div class="section2">
     <img src="Project 2.jpeg" alt="Project 2" class="mediumimage">
     <p class="centeredtext">Project 2</p>
 </div>
+</div>
   <div class="box">
+    <div class="section3">
     <img src="Project 3.png" alt="Project 3" class="smallerimage">
     <p class="centeredtext">Project 3</p>
-
+</div>
 </div>
 </main>
 
