--- a/webdevelopment/Project1.html
+++ b/webdevelopment/Project1.html
@@ -36,7 +36,7 @@
 <h2 class="centeredtext">Before</h2>
 <img src="Before.png" alt="Before project" class="projectimage1">
 <h2 class="centeredtext">After</h2>
-<img src="Project1.jpg" alt="Project 1">
+<img src="Project1.jpg" alt="Project 1" class="projectimage2">
 
 <div class="box">
     I Forgot How To Paint (2022)
