--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -19,6 +19,8 @@
     <ul>
         <li class="active"><a href="index.html" id="Home">Home</a></li>
         <li><a href="about.html" id="About">About</a></li>
+        <li><a href="contactpage.html">Contact</a></li>
+        <li><a href="reflection.html">Reflection</a></li>
         <li><a href="project.html" id="Projects">Projects</a>
             <ul>
                 <li><a href="project" id="Link1">Project 1</a></li>
