--- a/webdevelopment/Project1.html
+++ b/webdevelopment/Project1.html
@@ -33,10 +33,12 @@
     </nav>
 <body>
 <h1>Project 1</h1>
+<div class="box">
 <h2 class="centeredtext">Before</h2>
-<img src="Before.png" alt="Before project" class="projectimage1">
+<img src="Before.png" alt="Before project" class="projectimage1"></div>
+<div class="box">
 <h2 class="centeredtext">After</h2>
-<img src="Project1.jpg" alt="Project 1" class="projectimage2">
+<img src="Project1.jpg" alt="Project 1" class="projectimage2"></div>
 
 <div class="box">
     I Forgot How To Paint (2022)
