--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -44,12 +44,12 @@
 
   <div class="box">
     <div class="section2">
-    <img src="Project 2.jpeg" alt="Project 2" class="mediumimage" > <div class="centeredtext"> <a href="Project2.html">click to learn more</a></div><p class="centeredtext">Project 2</p>
+    <img src="Project 3.png" alt="Project 2" class="mediumimage" > <div class="centeredtext"> <a href="Project2.html">click to learn more</a></div><p class="centeredtext">Project 2</p>
 </div>
 </div>
   <div class="box">
     <div class="section3">
-    <img src="Project 3.png" alt="Project 3" class="smallerimage" >
+    <img src="Project 2.jpeg" alt="Project 3" class="smallerimage" >
     <p class="centeredtext">Project 3</p>
 </div>
 </div>
