--- a/webdevelopment/project.html
+++ b/webdevelopment/project.html
@@ -38,18 +38,18 @@
 <main id="layout">
 <div class="box">
   <div class="section1">
-    <img src="Project1.jpg" alt="Project 1" class="miniimage" class="sectionimg" > <div class="centeredtext"> <a href="Project1.html">click to learn more</a></div><p class="centeredtext">Project 1</p>
+    <img src="Project1.jpg" alt="Project 1" class="miniimage" class="sectionimg" > <div class="centeredtext"> <a href="Project1.html" class="resume-link">click to learn more</a></div><p class="centeredtext">Project 1</p>
 </div>
 </div>
 
   <div class="box">
     <div class="section2">
-    <img src="Project 3.png" alt="Project 2" class="mediumimage" > <div class="centeredtext"> <a href="project2.html">click to learn more</a></div><p class="centeredtext">Project 2</p>
+    <img src="Project 3.png" alt="Project 2" class="mediumimage" > <div class="centeredtext"> <a href="project2.html" class="resume-lin"k>click to learn more</a></div><p class="centeredtext">Project 2</p>
 </div>
 </div>
   <div class="box">
     <div class="section3">
-    <img src="Project 2.jpeg" alt="Project 3" class="smallerimage" > <div class="centeredtext"> <a href="project3.html">click to learn more</a></div><p class="centeredtext">Project 3</p>
+    <img src="Project 2.jpeg" alt="Project 3" class="smallerimage" > <div class="centeredtext"> <a href="project3.html" class="resume-link">click to learn more</a></div><p class="centeredtext">Project 3</p>
 </div>
 </div>
 </main>
